# boletas.colbun.cl

./: .gitignore  Dockerfile  LICENSE  README.md  lecturas.db  pyproject.toml  requirements.txt
lector_facturas/: app.py  db.py
